@@ -29,7 +29,7 @@ public class PharmacyRecommendationService {
             return;
         }
 
-        DocumentDto documentDto = kakaoApiResponseDto.getDocumentList().getFirst();
+        DocumentDto documentDto = kakaoApiResponseDto.getDocumentList().get(0);
 
 //        List<Direction> directionList = directionService.buildDirectionList(documentDto); // data.go.kr 정보 이용
         List<Direction> directionList = directionService.buildDirectionListByCategoryApi(documentDto); // 카카오 카테고리 API 이용
